# wans

./: CMakeLists.txt  README.MD  imgui.ini
include/: app.h  appbase.h  editor.h  framebuffer.h  mainviewport.h  platform.h  renderer.h  shader.h  sidebar.h  theme.h  topbar.h  widget.h  widgeteditor.h  window.h
shaders/: fragment.glsl  rect.glsl  texrect.glsl  texture.glsl  triangle.glsl
src/: app.cpp  appbase.cpp  editor.cpp  framebuffer.cpp  main.cpp  mainviewport.cpp  platform.cpp  shader.cpp  sidebar.cpp  theme.cpp  topbar.cpp  widget.cpp  widgeteditor.cpp  window.cpp
